@@ -9,6 +9,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -16,9 +18,6 @@ import java.util.stream.Collectors;
 public class ArticleServiceImpl implements ArticleService {
     private final ArticleRepository articleRepository;
     private final TeamService teamService;
-
-    @Autowired
-    private CategoryService categoryService;
 
     public ArticleServiceImpl(ArticleRepository articleRepository, TeamService teamService) {
         this.articleRepository = articleRepository;
@@ -32,7 +31,9 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Override
     public List<Article> getAllArticles() {
-        return articleRepository.findAll();
+        List<Article> articles = articleRepository.findAll();
+        Collections.reverse(articles);
+        return articles;
     }
 
     @Override
@@ -42,12 +43,12 @@ public class ArticleServiceImpl implements ArticleService {
 
     @Override
     public List<Article> getArticlesByCategoryId(Long id) {
-        return articleRepository.findAll().stream()
+        List<Article> articles = new ArrayList<>(articleRepository.findAll().stream()
                 .filter(article -> article.getCategories().stream()
-                        .anyMatch(category -> category.getId().equals(id)))
-                .collect(Collectors.toList());
+                        .anyMatch(category -> category.getId().equals(id))).toList());
+        Collections.reverse(articles);
+        return articles;
     }
-
     @Override
     public List<Article> getAllArticlesByTeam(Integer id, Integer page) {
         Team team = teamService.teamById(id);
